--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,48 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <copy todir="${basedir}/arduino/data/">
+                                  <filelist dir="${basedir}/arduino/src"files="chota.css,zepto.js"/>
+                                </copy>
+                                <java classname="com.googlecode.htmlcompressor.CmdLineCompressor" classpathref="maven.plugin.classpath">
+                                    <arg line="--compress-js --remove-intertag-spaces"/>
+                                    <arg line="--output ${basedir}/arduino/data/"/>
+                                    <arg value="${basedir}/arduino/src/index.html"/>
+                                </java>
+                                <exec dir="${basedir}/arduino" executable="platformio">
+                                    <arg value="run"/>
+                                </exec>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.googlecode.htmlcompressor</groupId>
+                        <artifactId>htmlcompressor</artifactId>
+                        <version>1.5.2</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.yahoo.platform.yui</groupId>
+                        <artifactId>yuicompressor</artifactId>
+                        <version>2.4.8</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
