--- a/pom.xml
+++ b/pom.xml
@@ -3,38 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.lbogdanov</groupId>
     <artifactId>nixieclock</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     <version>1.0</version>
-    <name>Nixie Clock server</name>
+    <name>Nixie Clock</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <retrofit.version>2.3.0</retrofit.version>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>com.sparkjava</groupId>
-            <artifactId>spark-core</artifactId>
-            <version>2.6.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.squareup.retrofit2</groupId>
-            <artifactId>retrofit</artifactId>
-            <version>${retrofit.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.squareup.retrofit2</groupId>
-            <artifactId>converter-gson</artifactId>
-            <version>${retrofit.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
-            <scope>runtime</scope>
-        </dependency>
-    </dependencies>
     <build>
         <plugins>
             <plugin>
@@ -49,15 +23,15 @@
                         </goals>
                         <configuration>
                             <target>
-                                <copy todir="${basedir}/arduino/data/">
-                                  <filelist dir="${basedir}/arduino/src"files="chota.css,zepto.js"/>
+                                <copy todir="${basedir}/data/">
+                                  <filelist dir="${basedir}/src"files="chota.css,zepto.js"/>
                                 </copy>
                                 <java classname="com.googlecode.htmlcompressor.CmdLineCompressor" classpathref="maven.plugin.classpath">
                                     <arg line="--compress-js --remove-intertag-spaces"/>
-                                    <arg line="--output ${basedir}/arduino/data/"/>
-                                    <arg value="${basedir}/arduino/src/index.html"/>
+                                    <arg line="--output ${basedir}/data/"/>
+                                    <arg value="${basedir}/src/index.html"/>
                                 </java>
-                                <exec dir="${basedir}/arduino" executable="platformio">
+                                <exec dir="${basedir}" executable="platformio">
                                     <arg value="run"/>
                                 </exec>
                             </target>
@@ -76,37 +50,6 @@
                         <version>2.4.8</version>
                     </dependency>
                 </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <createDependencyReducedPom>false</createDependencyReducedPom>
-                            <finalName>nixieclock</finalName>
-                            <filters>
-                                <filter>
-                                    <artifact>*:*</artifact>
-                                    <excludes>
-                                        <exclude>META-INF/maven/**</exclude>
-                                        <exclude>META-INF/LICENSE.txt</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
-                            <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.lbogdanov.nixieclock.App</mainClass>
-                                </transformer>
-                            </transformers>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
