Use Google APIs for geolocation and time sync

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,7 @@
 [env:d1_mini]
 board = d1_mini
 framework = arduino
+lib_deps =
+    git+https://github.com/bblanchon/ArduinoJson#v6.9.1
+    git+https://github.com/vonZeppelin/Time#13f2722
 platform = espressif8266
