Back up changes

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,5 @@
 [env:d1_mini]
+build_flags=-DDEBUG_ESP_PORT=Serial -DDEBUG_ESP_SSL -DDEBUG_ESP_HTTP_CLIENT
 board = d1_mini
 framework = arduino
 lib_deps =
